--- a/mytest/pom.xml
+++ b/mytest/pom.xml
@@ -22,9 +22,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>7.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>6.5.4</version>
+            <version>7.2.0</version>
         </dependency>
 
         <dependency>
