--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
         <module>mytest</module>
     </modules>
 
+    <properties>
+        <java.version>1.8</java.version>
+<!--        <protobuf.version>3.8.0</protobuf.version>-->
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -29,6 +34,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
