--- a/mytest/pom.xml
+++ b/mytest/pom.xml
@@ -72,5 +72,16 @@
             <artifactId>spring-data-elasticsearch</artifactId>
             <version>3.1.9.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
