--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>test001</module>
         <module>test002</module>
         <module>mytest</module>
+        <module>test003</module>
     </modules>
 
     <properties>
